got templates to work

--- a/flaskApp/templates/model_tmplt.html
+++ b/flaskApp/templates/model_tmplt.html
@@ -4,7 +4,7 @@
     <Title> {{foo}}</Title>
   </head>
   <body>
-    {% for item in coll %}
+    {% for item in collection %}
       {{item}}
       <br>
     {% endfor %}
