--- a/10_occ/templates/occupationspage.html
+++ b/10_occ/templates/occupationspage.html
@@ -1,11 +1,24 @@
-<!DOCTYPE HTML>
-  <title>
-    {{Title}}
-  </title>
-  <body>
-    <ul>
-    {% for key, value in occupations %}
-      <li><span>{{key}}</span><span>{{value}}</span></li>
-    {% endfor %}
-    </ul>
-  </body>
+<!DOCTYPE html>
+  <html>
+    <head>
+      <Title>{{Title}}</Title>
+    </head>
+    <body>  
+      <table style="width:50%">
+        <tr>
+          <th>Job Class</th>
+          <th>Percentage</th>
+        </tr>
+        <tr></tr>
+        {% for key in occupations %}
+          <tr>
+            <td>{{key}}</td>
+            <td>{{occupations[key]}}</td>
+          </tr>
+        {% endfor %}
+      </table>
+      <div>
+        Random Occupation Selected: {{job}}
+      </div>
+    </body>
+  </html>
