added logout button in profile.html

--- a/15_login/templates/profile.html
+++ b/15_login/templates/profile.html
@@ -6,7 +6,9 @@
   <body>
     Welcome, {{User}}.
     <div>
-      <button type="button">Logout</button>
+      <form action = "/">
+        <button type="submit">Logout</button>
+      </form>
     </div>
   </body>
 </html>
