--- a/15_login/templates/profile.html
+++ b/15_login/templates/profile.html
@@ -6,7 +6,7 @@
   <body>
     Welcome, {{User}}.
     <div>
-      <form action = "/">
+      <form action = "/logout">
         <button type="submit">Logout</button>
       </form>
     </div>
