added logout and cached session

--- a/15_login/templates/error.html
+++ b/15_login/templates/error.html
@@ -6,7 +6,7 @@
   <body>
     You have entered in the wrong {{mistake}}.
     <div>
-      <form action="/error">
+      <form action="/">
         <button type ="submit">Return to login page</button>
       </form>
     </div>
