--- a/16_flasherit/templates/login.html
+++ b/16_flasherit/templates/login.html
@@ -1,22 +1,22 @@
-{% block Title %}
-  <title>
-    Login Page
-  </title>
-  <h1>Login Page</h1>
-{% endblock %}
-{% block Body %}
-  <form action = "/auth">
-    <div>Username:</div>
-    <input type = "text" name = "username"><br>
-    <div>Password:</div>
-    <input type = "text" name = "password"><br>
-    <input type = "submit" value = "Log In">
-  </form>
-{% endblock %}    
-    
-    <!-- 
-    Inheritance for error
-    -->
-{% block Message %}
-    Please log in.
-{% endblock %}
+{% extends "format.html" %}
+  {% block Title %}
+    <title>
+      Login Page
+    </title>
+    <h1>Login Page</h1>
+  {% endblock %}
+  {% block Body %}
+    <form action = "/auth">
+      <div>Username:</div>
+      <input type = "text" name = "username"><br>
+      <div>Password:</div>
+      <input type = "text" name = "password"><br>
+      <input type = "submit" value = "Log In">
+    </form>
+  {% endblock %}     
+      <!-- 
+      Inheritance for error
+      -->
+  {% block Message %}
+      Please log in.
+  {% endblock %}
