--- a/16_flasherit/templates/profile.html
+++ b/16_flasherit/templates/profile.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <title>
-    {{User}}'s Profile
-  </title>
-  <body>
-    Welcome, {{User}}.
-    <div>
-      <form action = "/logout">
-        <button type="submit">Logout</button>
-      </form>
-    </div>
-  </body>
-</html>
+{% extends "format.html" %}
+  {% block Title %}
+      <title>
+        {{User}}'s Profile
+      </title>
+      <h1>
+        {{User}}'s Profile
+      </h1>
+  {% endblock %}
+  {% block Body %}
+      Welcome, {{User}}.
+      <div>
+        <br>
+        <form action = "/logout">
+          <button type="submit">Logout</button>
+        </form>
+      </div>
+  {% endblock %}
