added flash to error page

--- a/16_flasherit/templates/error.html
+++ b/16_flasherit/templates/error.html
@@ -1,4 +1,10 @@
-{% extends "login.html" %} 
+{% extends "login.html" %}   
   {% block Message %}
+    {% block Flash %}  
+      {% for message in get_flashed_messages() %}
+        {{message}}
+        <br>
+      {% endfor %}
+    {% endblock %}
     You have entered in the wrong {{mistake}}.
   {% endblock %}
