--- a/16_flasherit/templates/login.html
+++ b/16_flasherit/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "format.html" %}
-  {% block Title %}
-    <title>
+  <title>
       Login Page
     </title>
+  {% block Title %}
     <h1>Login Page</h1>
   {% endblock %}
   {% block Body %}
@@ -13,10 +13,13 @@
       <input type = "text" name = "password"><br>
       <input type = "submit" value = "Log In">
     </form>
-  {% endblock %}     
-      <!-- 
+    <!-- 
       Inheritance for error
-      -->
-  {% block Message %}
-      Please log in.
-  {% endblock %}
+    -->
+    <div>
+      <br>
+      {% block Message %}
+        Please log in.
+      {% endblock %}
+    </div>
+  {% endblock %}     
