added workinh functions returnKeys() and comm(), working on buildTable() and addTo()

--- a/16_flasherit/templates/error.html
+++ b/16_flasherit/templates/error.html
@@ -1,5 +1,6 @@
 {% extends "login.html" %}   
   {% block Message %}
+    <!-- flash message from redirect from login.html -->
     {% block Flash %}  
       {% for message in get_flashed_messages() %}
         {{message}}
