--- a/25_restrio_TNPG/templates/metropolitan.html
+++ b/25_restrio_TNPG/templates/metropolitan.html
@@ -17,4 +17,5 @@
         {% for image in more_images %}
             <img src={{image}}> <br>
         {% endfor %}
+        {{image_url}}
     {% endblock Body %}
