Have passthrough of info to js working

--- a/18_d3/templates/index.html
+++ b/18_d3/templates/index.html
@@ -18,9 +18,7 @@
     	charset="utf-8">
     </script>
     <script>
-      d3.json("./meteorites.json", function(data) {
-        console.log(data);
-      });
+      var data = {{info|tojson}}
     </script>
     <!--
       Chosen Dataset URL
