Have passthrough of info to js via different method

--- a/18_d3/templates/index.html
+++ b/18_d3/templates/index.html
@@ -14,11 +14,13 @@
       <button id="transition-next">Next</button>
     </center>
 
+    <meta id="server-info" data-server='{{info}}'>
+
     <script src="http://d3js.org/d3.v5.min.js"
     	charset="utf-8">
     </script>
-    <script>
-      var data = {{info|tojson}}
+    <script src="static/script.js">
+
     </script>
     <!--
       Chosen Dataset URL
