devised new data filtering - now creates range for results - removed old filtering method

--- a/18_d3/templates/index.html
+++ b/18_d3/templates/index.html
@@ -8,10 +8,17 @@
   </head>
   <body>
     <center>
-      <div>
-        Filler Text
-      </div>
-      <button id="transition-next">Next</button>
+      
+      <!-- pulls up bar data, and adds new button -->
+      <button id="render">Render</button>
+
+      <!-- buttons to be created
+      shrink/expand range of graph
+      <button id="decrease-width">Decrease Range</button>
+      <button id="increase-width">Increase Range</button>
+      moves graph 1 back
+      <button id="transition-back">Back</button>
+      <button id="transition-next">Next</button> -->
     </center>
 
     <meta id="server-info" data-server='{{info}}'>
