--- a/18_d3/templates/index.html
+++ b/18_d3/templates/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <center>
-      
+      <div id="chart">
+        Testing
+      </div>
       <!-- pulls up bar data, and adds new button -->
       <button id="render">Render</button>
 
